# super-codex-workbench

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  main.py  mcp.config.json  mypy.ini  pyproject.toml  ruff.toml  setup-requirements.json
.clinerules/: README.md  mcp-integrations.md  workspace-venv.md
.clinerules/workflows/: speckit.fix.md
.codex-cli-rules/: decision-clarification.md  python-environment.md  quality-first-engineering.md  self-improving-reflection.md  simplification-cascades.md  systematic-debugging.md
docs/: badges.md
docs/demo/: demo.html  rocket.html
docs/samples/: data-quality-bot.html  docs-summarizer.html  experiment-notebook.html  finance-reconciler.html  kpi-tracker.html  sales-insights.html
scripts/: check.sh  git-push.sh  git-save.sh  git-start.sh  make-demo-gif.sh  make-rocket-gif.sh  mcp-add.sh  setup.sh  windows-setup.ps1
scripts/demo/: make_gif.py
templates/: mcp_report.html.j2  sample.html.j2
warehouse/: README.md  manifest.json
workbench/: __init__.py  logging_setup.py  mcp_clients.py  models.py  projects.py  warehouse.py
workbench/clients/: README.md  __init__.py
